2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-setTitle:, -setAttributedTitle:,
	-setAlternateImage:, -setImagePosition:): Update the control to
	reflect the changes.

2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m (-_openRecentDocument:): Use most
	current method to display document.

2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBounds:, -setBoundsSize:): Rewrite of this
	methods plus a few helpers. We pass now all the frame/bounds test cases.
	* Source/NSView.m (-_viewWillMoveToWindow:): Move the invalidation of the
	coordinate transformations and the cursor rects before the window
	test. Remove calls to coordinate invalidation from other places.

2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* common_ArrowDown.tiff:
	* common_ArrowRight.tiff:
	* common_ArrowUp.tiff:
	* common_3DArrowDown.tiff:
	* common_ArrowDownH.tiff:
	* common_ArrowLeft.tiff:
	* common_ArrowLeftH.tiff:
	* common_3DArrowLeft.tiff:
	* common_ArrowUpH.tiff:
	* common_3DArrowUp.tiff:
	* common_ArrowRightH.tiff:
	* common_3DArrowRight.tiff: Ensure both sub-images have the same
	colorspace

2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Images/common_3DArrowRightH.tiff: Add high-res version

2011-06-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSImageCell.h:
	* Source/NSImageCell.m: Add support for NSImageScaleProportionallyUpOrDown

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Use -bestRepresentationForRect:context:hints: in
	-guiDrawInRect:... as well.

2011-06-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSegmentedCell.m (-initWithCoder:): Protect against
	selected segment being -1.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Implement -bestRepresentationForRect:context:hints:,
	which chooses the smallest rep larger than or equal to the provided size.
